# Research-Copilot

./: .env.example  .gitignore  Kepler_improvement_plan.md  Kepler_improvement_plan_v2.md  Kepler_vs_Hermes_comparison.md  PERFORMANCE_OPTIMIZATION.md  README.md  docker-compose.milvus.yml  eslint.config.mjs  mcp_servers.example.json  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
adapters/: local_runtime.py
agents/: __init__.py  chart_analysis_agent.py  general_answer_agent.py  literature_scout_agent.py  paper_analysis_agent.py  preference_memory_agent.py  research_document_agent.py  research_knowledge_agent.py  research_qa_agent.py  research_supervisor_agent.py  research_writer_agent.py
app/: globals.css  layout.tsx  page.tsx
apps/: cli.py
chains/: __init__.py  answer_chain.py  chart_understanding_chain.py  cot.py  graph_extraction_chain.py  plan_and_solve.py
components/: AnswerCard.tsx  AppNavigation.tsx  ChartQAPanel.tsx  ChartUnderstandPanel.tsx  DocumentChatPanel.tsx  DocumentStatusCard.tsx  EvidenceList.tsx  HealthStatusCard.tsx  InspectorPanel.tsx  JsonDebugPanel.tsx  LiteratureResearchPanel.tsx  ParseIndexPanel.tsx  QAPanel.tsx  ResearchActiveFigureAnchorCard.tsx  ResearchComposer.tsx  ResearchConversationMessage.tsx  ResearchFigurePreviewCard.tsx  ResearchFigureViewerModal.tsx  ResearchImportedPaperScopeSection.tsx  ResearchQATraceCard.tsx  ResearchSidebarSections.tsx  ResearchThreadArtifacts.tsx  ResearchThreadPreamble.tsx  ResearchTodoWorkbenchSection.tsx  ResearchWorkspaceCards.tsx  ResearchWorkspaceResults.tsx  ResearchWorkspaceSidebar.tsx  RetrievalHitsPanel.tsx  SupervisorExecutionCard.tsx  TraceSummaryCard.tsx  UploadPanel.tsx  (+1 more)
(+541 files in other folders)
